Corrigidos os Warnings